[package]
authors = ["Emil Fresk <emil.fresk@gmail.com>"]
categories = ["embedded", "nonlinear", "optimization"]
keywords = ["embedded", "optimization", "bfgs", "lbfgs"]
description = "A Rust implementation of the L-BFGS algorithm"
documentation = "https://docs.rs/lbfgs"
license = "MIT OR Apache-2.0"
readme = "README.md"
name = "lbfgs"
version = "0.2.0"
edition = "2018"

[dependencies]
num-traits = "0.2.8"

[dev-dependencies]
unit_test_utils = "0.1.3"
