[package]
authors = ["Emil Fresk <emil.fresk@gmail.com>",
           "Pantelis Sopasakis <https://alphaville.github.io>"]
categories = [
    "embedded",
    "algorithms",
    "science::robotics",
    "simulation",]
keywords = ["embedded", "optimization", "bfgs", "lbfgs"]
description = "A Rust implementation of the L-BFGS algorithm"
repository = "https://github.com/korken89/lbfgs-rs"
documentation = "https://docs.rs/lbfgs"
license = "MIT OR Apache-2.0"
readme = "README.md"
name = "lbfgs"
version = "0.2.2"
edition = "2018"

[dependencies]
num-traits = "0.2.19"

[dev-dependencies]
unit_test_utils = "0.1.4"
